Viewport and scissors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ thiserror = "1"
 tobj = { version = "3", features = ["log"] }
 vulkanalia = { version = "=0.23.0", features = ["libloading", "provisional", "window"] }
 winit = "0.29"
+project-root = "0.2.2"
 
